Updated Terraform notes

--- a/Terraform/01. State file.md
+++ b/Terraform/01. State file.md
@@ -5,11 +5,17 @@ tags:
   - DevOps
   - IaC
 ---
-# 02. State file
+# 01. State file
 
 Each Terraform directory has a state file that **keeps track of what’s deployed**, so that, Terraform knows the difference between “what exists” and “what should exist”.
 
-By default, Terraform stores the state file in the working directory, but this can be changed to something else. Like an AWS S3 Bucket with encryption applied:
+By default, Terraform stores the state file in the working directory, but this can be changed to something else.
+
+## Remote State file
+
+It is a good practice to keep the state file in a **remote location** with **encryption applied**.
+
+**Note:** Stafe file configurations should be defined on the **`backend.tf`** file.
 
 ```hcl
 terraform {
