--- a/Terraform/02. Providers.md
+++ b/Terraform/02. Providers.md
@@ -5,21 +5,24 @@ tags:
   - DevOps
   - IaC
 ---
-# 03. Providers
+# 02. Providers
 
 Terraform providers are **plugins** that enable Terraform to interact with various cloud platforms.
 
 Each provider is responsible for understanding the API interactions and exposing the resources that can be created, managed, and updated through Terraform.
 
-See [Version constraints](https://developer.hashicorp.com/terraform/language/expressions/version-constraints).
+**Note:** Providers are installed on the `.terraform/providers/` folder.
 
-Example:
+## Plugin versions
+
+Provider plugins can have constraints applied to their version, a common use case is the enforcement of a specific version using the `~>` operator, which specified the latest version of a major release.
 
 ```hcl
 terraform {
 	required_providers {
 	    aws = {
 		    source  = "hashicorp/aws"
+			# Pick the latest version from 6.0.0 to 7.0.0.
 		    version = "~> 6.0"
 		}
 	}
@@ -30,4 +33,5 @@ provider "aws" {
 }
 ```
 
-**Note:** Providers are usually defined in the `providers.tf` file.
+**Note:** See [Version constraints](https://developer.hashicorp.com/terraform/language/expressions/version-constraints).
+
