KodeKloud | Task 10 - Terraform

--- a/Terraform/00. Best Practices.md
+++ b/Terraform/00. Best Practices.md
@@ -5,14 +5,16 @@ tags:
   - DevOps
   - IaC
 ---
+**Table of contents**
+- [00. Best Practices](#00-best-practices)
+  - [Naming Conventions](#naming-conventions)
+  - [Project Structure:](#project-structure)
+  - [Security](#security)
+  - [Versioning](#versioning)
+
 # 00. Best Practices
 
 Bellow is a list of best practices related to Terraform code management and workflow.
-
-- [Naming Conventions](#naming-conventions)
-- [Project Structure](#project-structure)
-- [Security](#security)
-- [Versioning](#versioning)
 
 ## Naming Conventions
 
