--- a/Terraform/01. State file.md
+++ b/Terraform/01. State file.md
@@ -5,6 +5,10 @@ tags:
   - DevOps
   - IaC
 ---
+**Table of contents**
+- [01. State file](#01-state-file)
+	- [Remote State file](#remote-state-file)
+
 # 01. State file
 
 Each Terraform directory has a state file that **keeps track of what’s deployed**, so that, Terraform knows the difference between “what exists” and “what should exist”.
