--- a/Terraform/02. Providers.md
+++ b/Terraform/02. Providers.md
@@ -5,6 +5,10 @@ tags:
   - DevOps
   - IaC
 ---
+**Table of contents**
+- [02. Providers](#02-providers)
+	- [Plugin versions](#plugin-versions)
+
 # 02. Providers
 
 Terraform providers are **plugins** that enable Terraform to interact with various cloud platforms.
