--- a/Terraform/03. Block Types.md
+++ b/Terraform/03. Block Types.md
@@ -5,21 +5,23 @@ tags:
   - DevOps
   - IaC
 ---
+**Table of contents**
+- [03. Block Types](#03-block-types)
+  - [Provider](#provider)
+  - [Resource](#resource)
+  - [Data](#data)
+  - [Module](#module)
+  - [Variable](#variable)
+  - [Output](#output)
+  - [Locals](#locals)
+  - [Terraform](#terraform)
+
 # 03. Block Types
 
 Terraform configuration files are made up of different block types, which define resources, data sources, providers, modules, variables, outputs, and more.
 Each block serves a specific purpose in defining infrastructure and behavior.
 
 Bellow is a list of Terraform block types.
-
-- [Provider](#provider)
-- [Resource](#resource)
-- [Data](#data)
-- [Module](#module)
-- [Variable](#variable)
-- [Output](#output)
-- [Locals](#locals)
-- [Terraform](#terraform)
 
 ## Provider
 
