--- a/Terraform/04. Variable Types.md
+++ b/Terraform/04. Variable Types.md
@@ -5,18 +5,20 @@ tags:
   - DevOps
   - IaC
 ---
+**Table of contents**
+- [04. Variable Types](#04-variable-types)
+  - [String](#string)
+  - [Number](#number)
+  - [Boolean](#boolean)
+  - [Any](#any)
+  - [List](#list)
+  - [Map](#map)
+  - [Object](#object)
+  - [Tuple](#tuple)
+
 # 04. Variable Types
 
 Terraform supports multiple variable types, such as:
-
-- [String](#string)
-- [Number](#number)
-- [Boolean](#boolean)
-- [Any](#any)
-- [List](#list)
-- [Map](#map)
-- [Object](#object)
-- [Tuple](#tuple)
 
 ## String
 
