--- a/Terraform/05. Terraform Commands.md
+++ b/Terraform/05. Terraform Commands.md
@@ -5,24 +5,26 @@ tags:
   - DevOps
   - IaC
 ---
+**Table of contents**
+- [05. Terraform Commands](#05-terraform-commands)
+  - [Initializing Terraform](#initializing-terraform)
+  - [Code Formatting](#code-formatting)
+  - [Configuration Validation](#configuration-validation)
+  - [Planing Changes](#planing-changes)
+  - [Applying Changes](#applying-changes)
+  - [Destroying Infrastructure](#destroying-infrastructure)
+  - [Showing Resources](#showing-resources)
+  - [Outputing Values](#outputing-values)
+  - [Refreshing State](#refreshing-state)
+  - [Graphing Dependencies](#graphing-dependencies)
+  - [Console](#console)
+  - [Force Unlocking State](#force-unlocking-state)
+  - [Tainting Resources (deprecated, use -replace)](#tainting-resources-deprecated-use--replace)
+  - [Replacing Resources](#replacing-resources)
+
 # 05. Terraform Commands
 
 Bellow is a list of Terraform commands.
-
-- [Initializing Terraform](#initializing-terraform)
-- [Code Formatting](#code-formatting)
-- [Configuration Validation](#configuration-validation)
-- [Planing Changes](#planing-changes)
-- [Applying Changes](#applying-changes)
-- [Destroying Infrastructure](#destroying-infrastructure)
-- [Showing Resources](#showing-resources)
-- [Outputing Values](#outputing-values)
-- [Refreshing State](#refreshing-state)
-- [Graphing Dependencies](#graphing-dependencies)
-- [Console](#console)
-- [Force Unlocking State](#force-unlocking-state)
-- [Tainting Resources (deprecated, use -replace)](#tainting-resources-deprecated-use--replace)
-- [Replacing Resources](#replacing-resources)
 
 ## Initializing Terraform
 
