Kubernetes notes & mini-project

--- a/AWS/AWS Cloud Practitioner/01. Shared Responsibility Model.md
+++ b/AWS/AWS Cloud Practitioner/01. Shared Responsibility Model.md
@@ -37,4 +37,4 @@ Both AWS and the customer are responsible for:
 - Configuration management; 
 - Awareness & Training of staff.
 
-**Note:** For more detailed information, see [AWS - Shared Responsibility Model](aws.amazon.com/pt/compliance/shared-responsibility-model/).
+**Note:** For more detailed information, see [AWS - Shared Responsibility Model](https://aws.amazon.com/pt/compliance/shared-responsibility-model/).
