--- a/AWS/AWS Cloud Practitioner/07. Compute Services.md
+++ b/AWS/AWS Cloud Practitioner/07. Compute Services.md
@@ -54,7 +54,7 @@ It is integrated with [ECS](#amazon-ecs-elastic-container-service) and [Fargate]
 
 ### Amazon EKS (Elastic Kubernetes Service)
 
-Amazon EKS is a **managed Kubernetes control plane** for running containerized applications using Kubernetes.
+Amazon EKS is a **managed [Kubernetes](01.%20Overview.md#01--overview) control plane** for running containerized applications using Kubernetes.
 
 It supports standard `kubectl`commands and AWS managed the k8s control plane, while the user managed the worker nodes (via [EC2](04.%20Amazon%20EC2.md#04--ec2) or [Fargate](#aws-fargate-serverless)).
 
