--- a/Kubernetes/00. Cheatsheet.md
+++ b/Kubernetes/00. Cheatsheet.md
@@ -2,34 +2,66 @@
 Date: 2025-11-14
 Technology: Kubernetes
 tags:
-  - Containers
+  - Container_Orchestration
   - DevOps
 ---
 **Table of contents**
+
 - [00. Cheatsheet](#00-cheatsheet)
   - [Kubectl](#kubectl)
+  - [General commands](#general-commands)
     - [Pod commands](#pod-commands)
+    - [ReplicaSet commands](#replicaset-commands)
     - [Deployment commands](#deployment-commands)
+    - [Service commands](#service-commands)
 
 # 00. Cheatsheet
 
 ## Kubectl
 
-### Pod commands
+## General commands
+
+```bash
+kubectl apply -f <file-name> # Deploys an object to the k8s cluster from a YAML file manifest.
+```
+
+### [Pod](02.%20Pods.md#02--pods) commands
 
 ```bash
 kubectl run <pod-name> <container-image> -n <namespace> # Deploys a pod from a container image.
+kubectl delete pod/<pod_name> -n <namespace>            # Deletes a pod from a given namespace.
 kubectl get pods -n <namespace>                         # Lists all pods in a given namespace.
 kubectl get pods -n <namespace> -o wide                 # Lists all pods in a given namespace with further details.
 kubectl logs <pod_name> -n <namespace>                  # Prints the logs of a pod.
 kubectl describe pod/<pod_name> -n namespace            # Describes the structure of a pod.
+kubectl edit pod/<pod_name> -n <namespace>              # Edits the pod configuration.
 ```
 
-### Deployment commands
+### [ReplicaSet](03.%20ReplicaSets.md#03--replicasets) commands
+
+```bash
+kubectl get replicaset -n <namespace>                            # Lists all ReplicaSets in a given namespace.
+kubectl get rs -n <namespace>                                    # Same effect.
+kubectl get rs -n <namespace> -o wide                            # For slightly more detailed information.
+kubectl logs <rs_name> -n <namespace>                            # Prints the logs of a ReplicaSet.
+kubectl describe rs/<rs_name> -n <namespace>                     # Describes the structure of a ReplicaSet.
+kubectl edit rs/<rs_name> -n <namespace>                         # Edits the ReplicaSet configuration.
+kubectl scale --replicas=<desired_replicas> replicaset <rs_name> # Scales the number of pods managed by a ReplicaSet.
+```
+
+### [Deployment](04.%20Deployments.md#04--deployments) commands
 
 ```bash
 kubectl get deployments -n <namespace>                                # Lists all deployments in a given namespace.
 kubectl logs <deployment_name> -n <namespace>                         # Prints the deployments of a pod.
 kubectl describe deployment/<deployment_name> -n namespace            # Describes the structure of a deployment.
 kubectl rollout restart deployment/<deployment_name> -n <namespace>   # Restarts a deployment.
+```
+
+### [Service](05.%20Services.md#05--services) commands
+
+```bash
+kubectl get service -n <namespace>                            # Lists all ReplicaSets in a given namespace.
+kubectl get svc -n <namespace>                                # Same effect.
+kubectl get svc -n <namespace> -o wide                        # For slightly more detailed information.
 ```
