--- a/Kubernetes/01. Overview.md
+++ b/Kubernetes/01. Overview.md
@@ -1,14 +1,23 @@
 ---
-Date: 2025-11-15
+Date: 2025-12-03
 Technology: Kubernetes
 tags:
-  - Containers
+  - Container_Orchestration
   - DevOps
 ---
 **Table of contents**
+
 - [01. Overview](#01-overview)
-  - [Key components](#key-components)
-  - [Interacting with a cluster](#interacting-with-a-cluster)
+  - [Container Orchestration](#container-orchestration)
+  - [Kubernetes Architecture](#kubernetes-architecture)
+    - [Nodes (Minions)](#nodes-minions)
+  - [Kubernetes Components](#kubernetes-components)
+    - [API Server](#api-server)
+    - [`etcd` Keystore](#etcd-keystore)
+    - [Scheduler](#scheduler)
+    - [Controller](#controller)
+    - [Container Runtime](#container-runtime)
+    - [Kubelet](#kubelet)
 
 # 01. Overview
 
@@ -16,21 +25,70 @@ Kubernetes, (originally developed by Google), is an **open-source container orch
 
 Kubernetes can be deployed on multiple platforms such as locally and on a cloud like AWS.
 
-<div style="text-align: center">
-    <img src="./assets/Control%20Plane.svg">
+**Note:** For a list of Kubernetes commands, see [Kubernetes Cheatsheet](00.%20Cheatsheet.md#00--cheatsheet).
+## Container Orchestration
+
+Container Orchestration s the automatic management of containerized applications, enabling efficient application deployment, scaling, and management in a complex environment.
+
+It brings many advantages such as:
+
+- Because there are multiple instances of an application running in different [nodes](#nodes-minions), a hardware failure does not bring the application down. (**High availability** principle);
+- The user traffic is **load balanced** across the various containers;
+- The applications automatically scale up/down based on demand increase/decrease.
+
+<div align="center">
+    <img src="../Assets/Images/Kubernetes - Container Orchestration.png" alt="Kubernetes - Container Orchestration">
 </div>
 
-## Key components
+## Kubernetes Architecture
 
-The key components of Kubernetes are:
+### Nodes (Minions)
 
-- **Master Node (Control Plane)** : Node that manages the cluster;
-- **Nodes** : A node is a worker machine controled by the cluster;
-- **Pods** : A pod is the smallest deployable unit, (can contain one or more containers), that can exist on the cluster.
+A node, (previously known as minion), **is a machine**, (physical or virtual), on which Kubernetes is installed.
 
-## Interacting with a cluster
+A node is a worker machine, where containers are launched by Kubernetes.
 
-To interact with a Kubernetes cluster, there are two ways:
+When **multiple nodes** are grouped together, they **form a cluster**.
 
-- Using `kubectl` ("Cube Control") : Default command line toll used to interact with clusters; 
-- Using `helm` : Package manager for Kubernetes.
+A cluster is **controlled by a special node**, known as the **master node**. The master node watches over the other nodes and is responsible by the container orchestration on the worker nodes.
+
+<div align="center">
+    <img src="../Assets/Images/Kubernetes - Nodes.png" alt="Kubernetes - Nodes">
+</div>
+
+## Kubernetes Components
+
+Kubernetes is composed by the following components:
+
+### API Server
+
+The API Server acts as the **frontend for Kubernetes**, it is used to interact with the Kubernetes cluster by users, management devices, CLIs, etc.
+
+### `etcd` Keystore
+
+`etcd` is a distributed reliable keystore used by Kubernetes to **store all data required to manage the cluster**.
+
+> **How does a node know that other nodes exist?**
+> `etcd` stores all the information on each node in a distributed manner.
+
+### Scheduler
+
+The scheduler is responsible for **distributing work**, (or containers), across multiple nodes.
+
+It scans for newly created containers and assigns them to nodes.
+
+### Controller
+
+The controllers are responsible for **noticing and responding** when nodes, containers or endpoints **go down**.
+
+Controllers make decisions to bring up new containers when this happens.
+
+### Container Runtime
+
+The Container Runtime is the **underlying software** that is used to **run the containers**.
+
+### Kubelet
+
+Kubelet is the agent that runs on each node in the cluster.
+
+Kubelet is responsible for making sure that the containers are running in the nodes as expected.
