--- a/Kubernetes/02. Pods.md
+++ b/Kubernetes/02. Pods.md
@@ -6,26 +6,34 @@ tags:
   - DevOps
 ---
 **Table of Contents**
+
 - [02. Pods](#02-pods)
+  - [Pod Networking](#pod-networking)
   - [Creating new pods](#creating-new-pods)
     - [YAML](#yaml)
     - [`kubectl`](#kubectl)
-  - [Checking pod(s) information](#checking-pods-information)
+  - [Pod Commands](#pod-commands)
+    - [Checking pod(s) information](#checking-pods-information)
+    - [Editing a pod after it is deployed](#editing-a-pod-after-it-is-deployed)
+    - [Deleting a pod](#deleting-a-pod)
 
 # 02. Pods
 
 A pod in Kubernetes is the **smallest and simplest unit in the Kubernetes object model** that can be created or deployed.
 
-A pod is ephemeral, it can be created, detroyed and re-created regularly.
+A **pod is ephemeral,** it can be created, destroyed and re-created regularly.
+
+<div align="center">
+    <img src="../Assets/Images/Kubernetes - Pods.png" alt="Kubernetes - Pods">
+</div>
 
 **Note:** A pod can be a host for multiple containers, however, as a best practice, only one container per pod should be allowed.
 
+## Pod Networking
 
-- Pods share the same network namespace, including IP address and port space.
-- Containers in a pod can communicate with each other using `localhost`.
-- To ensure availability and scalability, pods are often managed by higher-level controllers like Deployments, StatefulSets, or DaemonSets.
-- Persistent storage can be attached to pods using volumes.
-- Kubernetes uses a scheduler to place pods on suitable nodes based on resource requirements and constraints.
+Pods **share the same network namespace**, including IP address and port space.
+
+Containers in a pod can **communicate with each other using `localhost`**.
 
 ## Creating new pods
 
@@ -62,27 +70,45 @@ This will apply the configuration to the specified namespace. If there is no nam
 To create new pods, using `kubectl` run:
 
 ```bash
-kubectl run <pod-name> <container-image> -n <namespace>
+kubectl run <pod-name> --image <container-image> -n <namespace>
 ```
 
-## Checking pod(s) information
+## Pod Commands
+
+### Checking pod(s) information
 
 To list available pods, using `kubectl` run:
 
 ```bash
-kubectl get pods -n namespace
+kubectl get pods -n <namespace>
 # For slightly more detailed information:
-kubectl get pods -n namespace -o wide
+kubectl get pods -n <namespace> -o wide
 ```
 
 To describe a pod, using `kubectl` run:
 
 ```bash
-kubectl describe pod/<pod-name> -n namespace
+kubectl describe pod/<pod_name> -n <namespace>
 ```
 
 To check the logs of a pod, using `kubectl` run:
 
 ```bash
 kubectl logs <pod_name> -n <namespace>
+```
+
+### Editing a pod after it is deployed
+
+To edit an existing pod, using `kubectl`run:
+
+```bash
+kubectl edit pod/<pod_name> -n <namespace>
+```
+
+###  Deleting a pod
+
+To delete a pod, using `kubectl`, run:
+
+```bash
+kubectl delete pod/<pod_name> -n <namespace>
 ```
