Kubernetes notes update

--- a/Kubernetes/01. Overview.md
+++ b/Kubernetes/01. Overview.md
@@ -26,6 +26,7 @@ Kubernetes, (originally developed by Google), is an **open-source container orch
 Kubernetes can be deployed on multiple platforms such as locally and on a cloud like AWS.
 
 **Note:** For a list of Kubernetes commands, see [Kubernetes Cheatsheet](00.%20Cheatsheet.md#00--cheatsheet).
+
 ## Container Orchestration
 
 Container Orchestration s the automatic management of containerized applications, enabling efficient application deployment, scaling, and management in a complex environment.
@@ -92,3 +93,21 @@ The Container Runtime is the **underlying software** that is used to **run the c
 Kubelet is the agent that runs on each node in the cluster.
 
 Kubelet is responsible for making sure that the containers are running in the nodes as expected.
+
+## Kubernetes container runtimes
+
+When Kubernetes originally came out, **it was built specifically around Docker and only Docker was supported**. However, with the growing popularity of the Kubernetes project, other tools like `Rocket` and `Containerd` also wanted to integrate with Kubernetes.
+
+This was when the Container Runtime Interface (CRI) was introduced. **The CRI enables any container vendor to work as a container runtime for Kubernetes**, as long as they adhere to the Open Container Initiative, (OCI), Standard.
+
+The CRI is a **plugin interface that defines the API for container runtimes to integrate with Kubernetes** which enables container runtimes to be developed independently of Kubernetes as long as they implement the CRI API.
+
+Because Docker was widely used with Kubernetes and because Docker did not use the CRI, `Dockershim` was introduced, which was a was a **temporary solution that acted as a shim layer enabling Docker to communicate with Kubernetes without using the CRI** .
+
+`Dockershim` was removed in version 1.24 of Kubernetes, **removing the support for Docker**. However, anything that previously worked with Docker will still work because it continues to work with `Containerd` which is an abstraction of Docker.
+
+**Note:** All Docker images continue to work without any issues due to the fact that they adhere to the OCI Standard which allows them to be used with other container runtimes that also adhere to the OCI standard.
+
+<div align="center">
+    <img src="../Assets/Images/Kubernetes - Container Runtimes.png" alt="Kubernetes - Container Runtimes">
+</div>
