KodeKloud | Task 03 - Kubernetes

--- a/Kubernetes/00. Cheatsheet.md
+++ b/Kubernetes/00. Cheatsheet.md
@@ -22,19 +22,21 @@ tags:
 ## General commands
 
 ```bash
-kubectl apply -f <file-name> # Deploys an object to the k8s cluster from a YAML file manifest.
+kubectl api-resources                   # Lists all available resources in Kubernetes.
+kubectl explain <resource> --recursive  # Explains in detail the available resource properties for YAML definitions.
+kubectl apply -f <file-name>            # Deploys an object to the k8s cluster from a YAML file manifest.
 ```
 
 ### [Pod](02.%20Pods.md#02--pods) commands
 
 ```bash
-kubectl run <pod-name> <container-image> -n <namespace> # Deploys a pod from a container image.
-kubectl delete pod/<pod_name> -n <namespace>            # Deletes a pod from a given namespace.
-kubectl get pods -n <namespace>                         # Lists all pods in a given namespace.
-kubectl get pods -n <namespace> -o wide                 # Lists all pods in a given namespace with further details.
-kubectl logs <pod_name> -n <namespace>                  # Prints the logs of a pod.
-kubectl describe pod/<pod_name> -n namespace            # Describes the structure of a pod.
-kubectl edit pod/<pod_name> -n <namespace>              # Edits the pod configuration.
+kubectl run <pod-name> --image <container-image> -n <namespace> # Deploys a pod from a container image.
+kubectl delete pod/<pod_name> -n <namespace>                    # Deletes a pod from a given namespace.
+kubectl get pods -n <namespace>                                 # Lists all pods in a given namespace.
+kubectl get pods -n <namespace> -o wide                         # Lists all pods in a given namespace with further details.
+kubectl logs <pod_name> -n <namespace>                          # Prints the logs of a pod.
+kubectl describe pod/<pod_name> -n namespace                    # Describes the structure of a pod.
+kubectl edit pod/<pod_name> -n <namespace>                      # Edits the pod configuration.
 ```
 
 ### [ReplicaSet](03.%20ReplicaSets.md#03--replicasets) commands
@@ -55,7 +57,10 @@ kubectl scale --replicas=<desired_replicas> replicaset <rs_name> # Scales the nu
 kubectl get deployments -n <namespace>                                # Lists all deployments in a given namespace.
 kubectl logs <deployment_name> -n <namespace>                         # Prints the deployments of a pod.
 kubectl describe deployment/<deployment_name> -n namespace            # Describes the structure of a deployment.
+kubetctl rollout status deployment/<deployment_name> -n <namespace>   # Retirms the status of a rollout.
 kubectl rollout restart deployment/<deployment_name> -n <namespace>   # Restarts a deployment.
+kubectl rollout undo deployment/<deployment_name> -n <namespace>      # Undo a rollout.
+kubetctl rollout history deployment/<deployment_name> -n <namespace>  # Returns the list of revisions and history of rollouts.
 ```
 
 ### [Service](05.%20Services.md#05--services) commands
