--- a/Kubernetes/02. Pods.md
+++ b/Kubernetes/02. Pods.md
@@ -10,8 +10,8 @@ tags:
 - [02. Pods](#02-pods)
   - [Pod Networking](#pod-networking)
   - [Creating new pods](#creating-new-pods)
-    - [YAML](#yaml)
-    - [`kubectl`](#kubectl)
+    - [YAML (Declarative)](#yaml-declarative)
+    - [`kubectl` (Imperative)](#kubectl-imperative)
   - [Pod Commands](#pod-commands)
     - [Checking pod(s) information](#checking-pods-information)
     - [Editing a pod after it is deployed](#editing-a-pod-after-it-is-deployed)
@@ -39,7 +39,7 @@ Containers in a pod can **communicate with each other using `localhost`**.
 
 Pods can either be created from a YAML file, or from a container image.
 
-### YAML
+### YAML (Declarative)
 
 To create pods using YAML files, first, they must be constructed using the following structure:
 
@@ -65,7 +65,7 @@ kubectl apply -f <file-name>
 
 This will apply the configuration to the specified namespace. If there is no namespace specified, the pods will deploy to the default namespace.
 
-### `kubectl`
+### `kubectl` (Imperative)
 
 To create new pods, using `kubectl` run:
 
