--- a/Kubernetes/04. Deployments.md
+++ b/Kubernetes/04. Deployments.md
@@ -79,13 +79,19 @@ This behavior helps keep track of changes and rollback when necessary.
 To view the status of a rollout, using `kuectl`run:
 
 ```bash
-kubetctl rollout status deployment/<deployment_name>
+kubetctl rollout status deployment/<deployment_name> -n <namespace>
 ```
 
 To view the list of revisions and history of rollouts, using `kubectl`run:
 
 ```bash
-kubetctl rollout history deployment/<deployment_name>
+kubetctl rollout history deployment/<deployment_name> -n <namespace>
+```
+
+To undo a rollout, using `kubectl`, run:
+
+```bash
+kubectl rollout undo deployment/<deployment_name> -n <namespace>
 ```
 
 ### Types of rollouts
