Kubernetes notes update

--- a/AWS/AWS Cloud Practitioner/09. VPCs & Networking.md
+++ b/AWS/AWS Cloud Practitioner/09. VPCs & Networking.md
@@ -74,7 +74,7 @@ A subnet is a range if IPs inside a VPC, associated with a specific [AZ](02.%20A
 - **Private Subnet** - No direct internet access. Needs NAT (Gateway or Instance).
 
 <div align="center">
-  <img src="../../Assets/Images/AWS - VPC.png" alt="AWS - VPC" />
+  <img src="../../Assets/Images/Diagrams/AWS/VPC.png" alt="VPC" />
 </div>
 
 ### VPC Flow Logs
