--- a/Kubernetes/00. Cheatsheet.md
+++ b/Kubernetes/00. Cheatsheet.md
@@ -10,10 +10,11 @@ tags:
 - [00. Cheatsheet](#00-cheatsheet)
   - [Kubectl](#kubectl)
   - [General commands](#general-commands)
+    - [Node commands](#node-commands)
     - [Pod commands](#pod-commands)
     - [ReplicaSet commands](#replicaset-commands)
     - [Deployment commands](#deployment-commands)
-    - [Service commands](#service-commands)
+    - [Namespace commands](#namespace-commands)
 
 # 00. Cheatsheet
 
@@ -22,51 +23,67 @@ tags:
 ## General commands
 
 ```bash
-kubectl api-resources                   # Lists all available resources in Kubernetes.
-kubectl explain <resource> --recursive  # Explains in detail the available resource properties for YAML definitions.
-kubectl apply -f <file-name>            # Deploys an object to the k8s cluster from a YAML file manifest.
+#####################
+# Cluster Resources #
+#####################
+
+kubectl api-resources                  # Lists all available resources in Kubernetes.
+kubectl explain <resource> --recursive # Explains in detail the available resource properties for YAML definitions.
+
+#####################
+# Object Management #
+#####################
+
+kubectl get <object> -n <namespace>                    # Lists all objects of a given type, (e.g. pods), in a given namespace.
+kubectl get <object> -n <namespace> -o wide            # Lists all objects of a given type, (e.g. pods), in a given namespace, with further details.
+kubectl get <object> --all-namespaces                  # Lists all objects of a given type, (e.g. pods), across all namespaces.
+kubectl get <object> --selector <label>=<value>        # Lists all objects of a given type, (e.g. pods), filtering the results with the specified selector.
+
+kubectl get all -A                           # Lists all available resources across all namespaces.
+
+kubectl apply -f <file-name>                          # Deploys an object to the k8s cluster from a YAML file manifest.
+kubectl edit <object>/<object_name> -n <namespace>    # Edits the live configuration of an object, (e.g. pod).
+kubectl delete <object>>/<object_name> -n <namespace> # Deletes an object, (e.g. pod), from a given namespace.
+
+################
+# Debug & Logs #
+################
+
+kubectl describe <object>/<object_name> -n namespace  # Describes the structure of an object, (e.g. pod).
+kubectl logs <object_name> -n <namespace>             # Prints the logs of an object, (e.g. pod).
 ```
 
-### [Pod](02.%20Pods.md#02--pods) commands
+### Node commands
+
+```bash
+kubectl label nodes <node> <key>=<value>.         # Labels a node.
+kubectl taint nodes <node> <key>=<value>:<effect> # Taints a node. (Pod repelling).
+```
+
+### [Pod](02.%20Pods.md#02-pods) commands
 
 ```bash
 kubectl run <pod-name> --image <container-image> -n <namespace> # Deploys a pod from a container image.
-kubectl delete pod/<pod_name> -n <namespace>                    # Deletes a pod from a given namespace.
-kubectl get pods -n <namespace>                                 # Lists all pods in a given namespace.
-kubectl get pods -n <namespace> -o wide                         # Lists all pods in a given namespace with further details.
-kubectl logs <pod_name> -n <namespace>                          # Prints the logs of a pod.
-kubectl describe pod/<pod_name> -n namespace                    # Describes the structure of a pod.
-kubectl edit pod/<pod_name> -n <namespace>                      # Edits the pod configuration.
 ```
 
 ### [ReplicaSet](03.%20ReplicaSets.md#03--replicasets) commands
 
 ```bash
-kubectl get replicaset -n <namespace>                            # Lists all ReplicaSets in a given namespace.
-kubectl get rs -n <namespace>                                    # Same effect.
-kubectl get rs -n <namespace> -o wide                            # For slightly more detailed information.
-kubectl logs <rs_name> -n <namespace>                            # Prints the logs of a ReplicaSet.
-kubectl describe rs/<rs_name> -n <namespace>                     # Describes the structure of a ReplicaSet.
-kubectl edit rs/<rs_name> -n <namespace>                         # Edits the ReplicaSet configuration.
 kubectl scale --replicas=<desired_replicas> replicaset <rs_name> # Scales the number of pods managed by a ReplicaSet.
 ```
 
 ### [Deployment](04.%20Deployments.md#04--deployments) commands
 
 ```bash
-kubectl get deployments -n <namespace>                                # Lists all deployments in a given namespace.
-kubectl logs <deployment_name> -n <namespace>                         # Prints the deployments of a pod.
-kubectl describe deployment/<deployment_name> -n namespace            # Describes the structure of a deployment.
 kubetctl rollout status deployment/<deployment_name> -n <namespace>   # Retirms the status of a rollout.
 kubectl rollout restart deployment/<deployment_name> -n <namespace>   # Restarts a deployment.
 kubectl rollout undo deployment/<deployment_name> -n <namespace>      # Undo a rollout.
 kubetctl rollout history deployment/<deployment_name> -n <namespace>  # Returns the list of revisions and history of rollouts.
 ```
 
-### [Service](05.%20Services.md#05--services) commands
+### [Namespace](06.%20Namespaces.md#06--namespaces) commands
 
 ```bash
-kubectl get service -n <namespace>                            # Lists all ReplicaSets in a given namespace.
-kubectl get svc -n <namespace>                                # Same effect.
-kubectl get svc -n <namespace> -o wide                        # For slightly more detailed information.
+kubectl create namespace <namespace> # Creates a new namespace.
+kubectl config set-context $(kubectl config current-context) --namespace=<namespace> # Changes the default namespace used in the current context.
 ```
