--- a/Kubernetes/01. Overview.md
+++ b/Kubernetes/01. Overview.md
@@ -39,7 +39,7 @@ It brings many advantages such as:
 - The applications automatically scale up/down based on demand increase/decrease.
 
 <div align="center">
-    <img src="../Assets/Images/Kubernetes - Container Orchestration.png" alt="Kubernetes - Container Orchestration">
+    <img src="../Assets/Images/Diagrams/Kubernetes/Container Orchestration.png" alt="Container Orchestration">
 </div>
 
 ## Kubernetes Architecture
@@ -55,7 +55,7 @@ When **multiple nodes** are grouped together, they **form a cluster**.
 A cluster is **controlled by a special node**, known as the **master node**. The master node watches over the other nodes and is responsible by the container orchestration on the worker nodes.
 
 <div align="center">
-    <img src="../Assets/Images/Kubernetes - Nodes.png" alt="Kubernetes - Nodes">
+    <img src="../Assets/Images/Diagrams/Kubernetes/Nodes.png" alt="Nodes">
 </div>
 
 ## Kubernetes Components
@@ -110,5 +110,5 @@ Because Docker was widely used with Kubernetes and because Docker did not use th
 **Note:** All Docker images continue to work without any issues due to the fact that they adhere to the OCI Standard which allows them to be used with other container runtimes that also adhere to the OCI standard.
 
 <div align="center">
-    <img src="../Assets/Images/Kubernetes - Container Runtimes.png" alt="Kubernetes - Container Runtimes">
+    <img src="../Assets/Images/Diagrams/Kubernetes/Container Runtimes.png" alt="Container Runtimes">
 </div>
