--- a/Kubernetes/02. Pods.md
+++ b/Kubernetes/02. Pods.md
@@ -2,7 +2,7 @@
 Date: 2025-11-15
 Technology: Kubernetes
 tags:
-  - Containers
+  - Container_Orchestration
   - DevOps
 ---
 **Table of Contents**
@@ -24,10 +24,10 @@ A pod in Kubernetes is the **smallest and simplest unit in the Kubernetes object
 A **pod is ephemeral,** it can be created, destroyed and re-created regularly.
 
 <div align="center">
-    <img src="../Assets/Images/Kubernetes - Pods.png" alt="Kubernetes - Pods">
+    <img src="../Assets/Images/Diagrams/Kubernetes/Pods.png" alt="Pods">
 </div>
 
-**Note:** A pod can be a host for multiple containers, however, as a best practice, only one container per pod should be allowed.
+**Note:** A pod can be a host for multiple containers, however, as a best practice, only one container per pod should be allowed. If a pod has multiple containers, they will share the same network namespace and storage volumes.
 
 ## Pod Networking
 
@@ -56,6 +56,9 @@ spec: # Required field. Information about the object.
      - name: nginx-container
        image: nginx
 ```
+
+> Labels allow for easy grouping and filtering of pods based on their characteristics. See [Labels & Selectors](07.%20Scheduling.md#labels-&-selectors) and [Creating a new ReplicaSet](03.%20ReplicaSets.md#creating-a-new-replicaset).
+
 
 Then, using `kubectl`, run:
 
