--- a/Kubernetes/03. ReplicaSets.md
+++ b/Kubernetes/03. ReplicaSets.md
@@ -18,7 +18,7 @@ tags:
 
 # 03. ReplicaSets
 
-A ReplicaSet's purpose is to **maintain a stable set of replica [Pods](02.%20Pods.md#02--pods) running** at any given time.
+A ReplicaSet's purpose is to **maintain a stable set of replica [Pods](02.%20Pods.md#02-pods) running** at any given time.
 
 **Note:** It is recommended to define a [Deployment](04.%20Deployments.md#04--deployments) and let that Deployment manage ReplicaSets automatically.
 
@@ -71,7 +71,7 @@ To list available ReplicaSets, using `kubectl` run:
 ```bash
 kubectl get replicaset -n <namespace>
 # This will also work:
-kubectl get rs -n <namespace> -o wide
+kubectl get rs -n <namespace>
 # For slightly more detailed information:
 kubectl get rs -n <namespace> -o wide
 ```
