--- a/Kubernetes/04. Deployments.md
+++ b/Kubernetes/04. Deployments.md
@@ -25,7 +25,7 @@ A Deployment is a Kubernetes object that provides **declarative updates to appli
 It **manages the creation and scaling** of a group of replicas of a specific application and ensures that the desired state of the application is maintained.
 
 <div align="center">
-    <img src="../Assets/Images/Kubernetes - Deployments.png" alt="Kubernetes - Deployments">
+    <img src="../Assets/Images/Diagrams/Kubernetes/Deployments.png" alt="Deployments">
 </div>
 
 ## Creating a new Deployment
@@ -103,7 +103,7 @@ There are two types of rollouts:
 This rollout strategy will delete all pods of a running application before creating the new updated ones. (This will cause downtime).
 
 <div align="center">
-    <img src="../Assets/Images/Kubernetes - Rollout - Recreate.png" alt="Kubernetes - Rollout - Recreate">
+    <img src="../Assets/Images/Diagrams/Kubernetes/Rollout - Recreate.png" alt="Rollout - Recreate">
 </div>
 
 #### Rolling Update (Default)
@@ -113,7 +113,7 @@ This rollout strategy will upgrade a single pod of a running application and imm
 This will be repeated until all new pods have been created.
 
 <div align="center">
-    <img src="../Assets/Images/Kubernetes - Rollout - Rolling Update.png" alt="Kubernetes - Rollout - Rolling Update">
+    <img src="../Assets/Images/Diagrams/Kubernetes/Rollout - Rolling Update.png" alt="Rollout - Rolling Update">
 </div>
 
 This eliminates downtime when performing the rollout and is the default strategy.
@@ -158,4 +158,4 @@ To delete a Deployment, using `kubectl`, run:
 kubectl delete deployment/<deployment_name> -n <namespace>
 ```
 
-**Warning:** This will delete all [ReplicaSets](03.%20ReplicaSets.md#03--replicasets) and [Pods](02.%20Pods.md#02--pods) managed by the Deployment.
+**Warning:** This will delete all [ReplicaSets](03.%20ReplicaSets.md#03--replicasets) and [Pods](02.%20Pods.md#02-pods) managed by the Deployment.
