--- a/Kubernetes/05. Services.md
+++ b/Kubernetes/05. Services.md
@@ -15,10 +15,9 @@ tags:
   - [Service Commands](#service-commands)
     - [Checking Service information](#checking-service-information)
 
-
 # 05. Services
 
-Kubernetes Services **enable communication between various components** within and outside of an application. They are an abstract way to expose an application running on a set of [pods](02.%20Pods.md#02--pods).
+Kubernetes Services **enable communication between various components** within and outside of an application. They are an abstract way to expose an application running on a set of [pods](02.%20Pods.md#02-pods).
 
 Services are created using YAML files with the following `kubectl`command:
 
@@ -30,7 +29,7 @@ kubectl apply -f service.yaml
 
 ### NodePort
 
-The NodePort service type is used to **map a port on a [node](01.%20Overview.md#nodes-minions), to a port on a [pod](02.%20Pods.md#02--pods)**.
+The NodePort service type is used to **map a port on a [node](01.%20Overview.md#nodes-minions), to a port on a [pod](02.%20Pods.md#02-pods)**.
 
 In reality, there are 3 ports involved in this type of service:
 
@@ -39,10 +38,10 @@ In reality, there are 3 ports involved in this type of service:
 3. **Node Port** : Port used to access the application when connecting to the [node](01.%20Overview.md#nodes-minions).
 	- **Note:** Node Ports range from ports 30000-32767.
 
-Here is an example mapping the [node](01.%20Overview.md#nodes-minions) port 30008 to a [pod](02.%20Pods.md#02--pods) port 80:
+Here is an example mapping the [node](01.%20Overview.md#nodes-minions) port 30008 to a [pod](02.%20Pods.md#02-pods) port 80:
 
 <div align="center">
-    <img src="../Assets/Images/Kubernetes - Services - NodePort.png" alt="Kubernetes - Services - NodePort">
+    <img src="../Assets/Images/Diagrams/Kubernetes/Services - NodePort.png" alt="Services - NodePort">
 </div>
 
 This type of configuration is created with the following YAML:
@@ -66,12 +65,12 @@ spec:
     type: front-end
 ```
 
-In a Production scenario, where multiple [nodes](01.%20Overview.md#nodes-minions) and [pods](02.%20Pods.md#02--pods) exist, Kubernetes will automatically span the service across the [nodes](01.%20Overview.md#nodes-minions) and maps the target port to the same [node](01.%20Overview.md#nodes-minions) port in all [nodes](01.%20Overview.md#nodes-minions) of the cluster:
+In a Production scenario, where multiple [nodes](01.%20Overview.md#nodes-minions) and [pods](02.%20Pods.md#02-pods) exist, Kubernetes will automatically span the service across the [nodes](01.%20Overview.md#nodes-minions) and maps the target port to the same [node](01.%20Overview.md#nodes-minions) port in all [nodes](01.%20Overview.md#nodes-minions) of the cluster:
 
 Kubernetes - Services - NodePort Multi-Node
 
 <div align="center">
-    <img src="../Assets/Images/Kubernetes - Services - NodePort Multi-Node.png" alt="Kubernetes - Services - NodePort Multi-Node">
+    <img src="../Assets/Images/Diagrams/Kubernetes/Services - NodePort Multi-Node.png" alt="Services - NodePort Multi-Node">
 </div>
 
 **Note:** Incoming traffic will be randomly distributed across [nodes](01.%20Overview.md#nodes-minions).
@@ -83,7 +82,7 @@ The ClusterIP service type is the default type, (when the type is omitted in the
 It's primary objective is to **provide a stable IP address for service discovery**, however, this IP address is not accessible from outside the cluster.
 
 <div align="center">
-    <img src="../Assets/Images/Kubernetes - Services - ClusterIP.png" alt="Kubernetes - Services - ClusterIP">
+    <img src="../Assets/Images/Diagrams/Kubernetes/Services - ClusterIP.png" alt="Services - ClusterIP">
 </div>
 
 This type of service configuration is created with the following YAML:
@@ -108,7 +107,7 @@ spec:
 The LoadBalancer service type is used to **expose a service to external traffic through a cloud provider's** load balancer.
 
 <div align="center">
-    <img src="../Assets/Images/Kubernetes - Services - Load Balancer.png" alt="Kubernetes - Services - Load Balancer">
+    <img src="../Assets/Images/Diagrams/Kubernetes/Services - Load Balancer.png" alt="Services - Load Balancer">
 </div>
 
 This type of configuration is created with the following YAML:
